--- a/Skip/roll_dice/roll_diceH.html
+++ b/Skip/roll_dice/roll_diceH.html
@@ -29,8 +29,8 @@
                        <button id="roll">Roll</button>
 
         </div>
-                <table id="dice_spread">
-                    <tr></tr>
+                <table align="center" id="dice_spread">
+                    <!-- <tr id="diceRow"></tr> -->
 
                 </table>
     </main>
