--- a/Sheri/angry_dice/angry.html
+++ b/Sheri/angry_dice/angry.html
@@ -2,20 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Angry Birds</title>
-    <link rel="stylesheet" href="dice.css"/>
+    <title>Angry Dice</title>
+    <link rel="stylesheet" href="angry.css"/>
 </head>
 <body>
     <main>
-        <h1>Play Angry Dice!</h1>
-        <div>
-                    <h2 id=round>Round One</h1>
-                    <button id="roll">Roll!</button>
+        <div class="big">
+           <div class="lessBig">
+              <h1>Play Angry Dice!</h1>
+              <h2 id=round>Round One</h1>
+             <button id="roll">Roll!</button>
+           </div>
+           <div class="diceDiv">
+               <div class="dieDiv" id="die1"></div>
+               <div class="dieDiv" id="die2"></div>
+           </div>
         </div>
-        <div id="diceHere">
-        </div>
-
-
     </main>
 <script src="angry.js"></script>
 </body>
