--- a/Juan/Exercises/Week7/javapic/index.html
+++ b/Juan/Exercises/Week7/javapic/index.html
@@ -15,6 +15,6 @@
     <div class="bottom_jumbo"><a href="join.html">join now</a></div>
 
 </main>
-
+    <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
