finished Angry Dice

--- a/Carolyn/Roll the Dice/Angry_Dice.html
+++ b/Carolyn/Roll the Dice/Angry_Dice.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Angry Dice</title>
+    <link rel="stylesheet" href="AngryDice.css" />
   </head>
   <body>
     <h1>Angry Dice</h1>
@@ -13,10 +14,10 @@
     <div id="Stage"></div>
     <div class="buttons">
     <button id="ROLL">ROLL</button>
-    <button id="Save_die_one">SAVE THIS DIE</button>
-    <button id="Save_die_two">SAVE THIS DIE</button>
+    <button id="Save_die_one" value="OFF">SAVE THIS DIE</button>
+    <button id="Save_die_two" value="OFF">SAVE THIS DIE</button>
     </div>
 
-<script src="Angry_Dice.js"></script>
+<script src="AngryDice.js"></script>
   </body>
 </html>
