validation functionality complete

--- a/Juan/Exercises/Week7/javapic/join.html
+++ b/Juan/Exercises/Week7/javapic/join.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">.
 <head>
     <meta charset="UTF-8">
     <title>javapic</title>
@@ -22,6 +22,6 @@
         </form>
     </section>
 </main>
-    <script type="text/javascript" src="join.js"></script>
+    <script type="text/javascript" src="js/join.js"></script>
 </body>
 </html>
