--- a/Juan/Exercises/Week7/javapic/gallery.html
+++ b/Juan/Exercises/Week7/javapic/gallery.html
@@ -13,6 +13,6 @@
     </section>
     <div id="image_show" class="display_none"><img src="images/pdxcg_40.jpg" /></div>
 </main>
-    <script type="text/javascript" src="gallery.js"></script>
+    <script type="text/javascript" src="js/gallery.js"></script>
 </body>
 </html>
