--- a/Charles/week6/rollthedice/dice.html
+++ b/Charles/week6/rollthedice/dice.html
@@ -6,17 +6,20 @@
     <link rel="stylesheet" href="dice.css"/>
   </head>
   <body>
+    <div class="bround">
 
     <main>
-
+<div class="dice">
         <table width="100%">
-            <!-- <thead> -->
-                <!-- <tr>
-                </tr> -->
-            <!-- </thead> -->
+            <thead><p>Take a Chance and Roll the Dice!</p>
+              <p2>Select a number between one and ten.</p2>
+                <tr>
+                </tr>
+            </thead>
             <tbody id="Dice">
             </tbody>
 <tfoot>
+</div>
   <tr>
 
     <td><input type="number" id="dicenumber" /></td>
@@ -34,7 +37,7 @@
 
 ​
 <script src="dice.js"></script>
-
+</div>
   </body>
 
 </html>
