--- a/Garrett/Week2-js/longest.html
+++ b/Garrett/Week2-js/longest.html
@@ -1,6 +1,10 @@
 <html>
+    <head>
+        <link href="style.css" type="text/css" rel="stylesheet" />
+    </head>
     <body>
-        <script src="longest.js">
-        </script>
+        <h1>Header1</h1>
+        <p>P tag one</p>
+        <script src="longest.js"></script>
     </body>
 </html>
