--- a/Carolyn/Week8/random_quote/random_quote.html
+++ b/Carolyn/Week8/random_quote/random_quote.html
@@ -6,31 +6,18 @@
 
 <p id="demo"></p>
 
-<script>
+<script src="random_quote.js">
+
+// <script>
 // var text = '{"name":"John Johnson","street":"Oslo West 16","phone":"555 1234567"}';
-
-var xmlhttp = new XMLHttpRequest();
-var url = "nrs.json";
-// var obj = {};
-
-xmlhttp.onreadystatechange = function() {
-    if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
-        var obj = JSON.parse(xmlhttp.responseText);
-        document.getElementById("demo").innerHTML =
-        obj.name + "<br>" +
-        obj.street + "<br>" +
-        obj.phone;
-    };
-};
-xmlhttp.open("GET", url, true);
-xmlhttp.send();
-
+//
 // var obj = JSON.parse(text);
-
+//
 // document.getElementById("demo").innerHTML =
 // obj.name + "<br>" +
 // obj.street + "<br>" +
 // obj.phone;
+
 </script>
 
 </body>
