--- a/Charles/week7/javapic/gallery.html
+++ b/Charles/week7/javapic/gallery.html
@@ -14,6 +14,6 @@
     </section>
     <div id="image_show" class="display_none"><img src="images/pdxcg_40.jpg" /></div>
 </main>
-
+<script src="js/gallery.js"></script>
 </body>
 </html>
