initial requests set up

--- a/Juan/Exercises/Week8/random_quote/index.html
+++ b/Juan/Exercises/Week8/random_quote/index.html
@@ -13,7 +13,9 @@
         </div>
       </header>
       <div class="quote_box" id="quote_box">
-        &nbsp
+        <p id="quote_space">
+          &nbsp
+        </p>
       </div>
       <button type="button" name="get_inspired" id="get_inspired">Get Inspired</button>
       <footer>
