--- a/Charles/week8/randomquote/random.html
+++ b/Charles/week8/randomquote/random.html
@@ -1,13 +1,20 @@
+0 lines (17 sloc) 499 Bytes
 <!DOCTYPE html>
-<html>
+<html lang="en" charset="utf-8">
   <head>
     <meta charset="utf-8">
-    <title>random quote</title>
-    <link rel="stylesheet" href="random.css" />
+    <title>Random Quote Demo</title>
   </head>
   <body>
-    <h1>here is a quote</h1>
-<p1 id="quote">quote goes here</p1>
-<script src="random.js"></script>
+    <h1>Welcome to the Random Quote Generator</h1>
+    <blockquote id="quote-output">
+      quote not loaded yet...
+    </blockquote>
+    <div id="author">
+
+    </div>
+    <button id="get-quote-button" type="button" name="button">Get a random quote!</button>
+    <script id="my-script" src="random.js" charset="utf-8"></script>
+
   </body>
 </html>
