finished basic css styling, functionality online

--- a/Juan/Exercises/Week8/random_quote/index.html
+++ b/Juan/Exercises/Week8/random_quote/index.html
@@ -14,7 +14,7 @@
       </header>
       <div class="quote_box" id="quote_box">
         <p id="quote_space">
-          &nbsp
+          Clicketh the button and a quote doth appear... eth!
         </p>
       </div>
       <button type="button" name="get_inspired" id="get_inspired">Get Inspired</button>
