--- a/Carolyn/Week8/random_quote/random_quote.html
+++ b/Carolyn/Week8/random_quote/random_quote.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link rel='stylesheet' href='random_quote.css'/>
+</head>
 <body>
 
 <h2>Random Quote</h2>
@@ -19,6 +22,11 @@
 // obj.phone;
 
 </script>
+<button id="newQuote">New Quote</button>
 
 </body>
+<footer>
+<div id="footer">
+  Design Inspiration: <a href="https://www.instagram.com/hawnuhlee/">Hannah's Instagram</a></footer>
+</div>
 </html>
