--- a/Garrett/Week8/random_quote/index.html
+++ b/Garrett/Week8/random_quote/index.html
@@ -6,8 +6,14 @@
         <link rel="stylesheet" href="css/quote.css" />
     </head>
     <body>
-        <h1>Random Quote time!</h1>
-        <p>Be Inspired!</p>
+
+        <h2>Random Quote time.</h2>
+
+        <p id="quotes">quotes here</p>
+	<button id="button">Get Inspired</button>
         <script src="js/quote.js"></script> 
     </body>
+    <footer>
+	<p>Image taken from <a href="https://www.instagram.com/hawnuhlee/">Hannah's Instagram</a>	
+    </footer>
 </html>
