--- a/Charles/week8/randomquote/random.html
+++ b/Charles/week8/randomquote/random.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>quote</title>
+  </head>
+  <body>
+<h1>quote</h1>
+<p1>quote here</p1>
 
+<script src="random.js"></script>
+  </body>
+</html>
