--- a/Charles/week7/javapic/gallery.html
+++ b/Charles/week7/javapic/gallery.html
@@ -10,7 +10,7 @@
 <main class="gallery_page">
     <header>javapic <span class="tagline">develop something beautiful</span></header>
     <section id="gallery" class="gallery">
-        <!--<li><img src="images/pdxcg_01.jpg" /></li>-->
+        <!-- <img src="images/pdxcg_01.jpg" /> -->
     </section>
     <div id="image_show" class="display_none"><img src="images/pdxcg_40.jpg" /></div>
 </main>
