--- a/Garrett/Week8/jquerypic/index.html
+++ b/Garrett/Week8/jquerypic/index.html
@@ -1,2 +1,21 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>javapic</title>
+    <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+
+<main>
+    <header>javapic <span class="tagline">develop something beautiful</span></header>
+    <div id="jumbotron" class="jumbotron">
+        <div>a picture is worth a 1000 words</div>
+    </div>
+    <div class="bottom_jumbo"><a href="join.html">join now</a></div>
+
+</main>
+<script src="js/index.js"></script>
+<script src="https://code.jquery.com/jquery-1.11.3.min.js" charset="utf-8"></script>
+</body>
 </html>
