--- a/Garrett/Week8/jquerypic/gallery.html
+++ b/Garrett/Week8/jquerypic/gallery.html
@@ -13,6 +13,7 @@
     </section>
     <div id="image_show" class="display_none"><img src="images/pdxcg_40.jpg" /></div>
 </main>
+<script src="https://code.jquery.com/jquery-1.11.3.min.js" charset="utf-8"></script>
 <script src="js/gallery.js"></script>
 </body>
 </html>
