--- a/Garrett/Week8/jquerypic/join.html
+++ b/Garrett/Week8/jquerypic/join.html
@@ -22,6 +22,7 @@
         </form>
     </section>
 </main>
+<script src="https://code.jquery.com/jquery-1.11.3.min.js" charset="utf-8"></script>
 <script src="js/join.js"></script>
 </body>
 </html>
