--- a/Juan/Exercises/Week9/javapicJquery/gallery.html
+++ b/Juan/Exercises/Week9/javapicJquery/gallery.html
@@ -13,6 +13,8 @@
     </section>
     <div id="image_show" class="display_none"><img src="images/pdxcg_40.jpg" /></div>
 </main>
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="js/gallery.js"></script>
 </body>
 </html>
