--- a/Juan/Exercises/Week9/javapicJquery/join.html
+++ b/Juan/Exercises/Week9/javapicJquery/join.html
@@ -22,6 +22,8 @@
         </form>
     </section>
 </main>
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="js/join.js"></script>
 </body>
 </html>
