--- a/Charles/week8/randomquote/random.html
+++ b/Charles/week8/randomquote/random.html
@@ -5,13 +5,12 @@
     <title>quote</title>
   </head>
   <body>
-<h1>quote</h1>
+<h1>A lil dose of thinkjuice</h1>
+<div>
+<p id="quote"></p>
+<p id="author"></p>
 
-<tbody id="quote">
-  <p id="test"> test</p>
-</tbody>
-
-
+</div>
 <script src="random.js"></script>
   </body>
 </html>
