--- a/Charles/week8/randomquote/random.html
+++ b/Charles/week8/randomquote/random.html
@@ -5,10 +5,11 @@
     <title>quote</title>
   </head>
   <body>
-<h1>A lil dose of thinkjuice</h1>
+<h1>Quotes of the day!</h1>
 <div>
 <p id="quote1"></p>
 <p id="author"></p>
+
 
 </div>
 <script src="random.js"></script>
