--- a/Charles/week8/randomquote/random.html
+++ b/Charles/week8/randomquote/random.html
@@ -9,9 +9,8 @@
 <div>
 <p id="quote1"></p>
 <p id="author"></p>
-
-
 </div>
+<button id="newQuote">See a new quote "quotes refreshed every five minutes"</button>
 <script src="random.js"></script>
   </body>
 </html>
