forum javascript implemented

--- a/Juan/Exercises/Forum/index.html
+++ b/Juan/Exercises/Forum/index.html
@@ -18,11 +18,10 @@
           <input type="text" name="post_title" id="post_title" value="">
           <label for="post_text">Post Text</label>
           <textarea name="post_text" id="post_text" rows="8" cols="40"></textarea>
-          <input type="submit" name="make_post" value="Post">
+          <input type="submit" name="make_post" value="Post" id="make_post">
         </form>
       </div>
-      <div class="post_display">
-
+      <div class="post_display" id="post_display">
       </div>
     </div>
     <footer></footer>
