--- a/Charles/week8/randomquote/random.html
+++ b/Charles/week8/randomquote/random.html
@@ -6,12 +6,15 @@
     <title>quote</title>
   </head>
   <body>
-<h1>Quotes of the day!</h1>
 <div class="bround">
-<p id="quote1"></p>
-<p id="author"></p>
-</div>
+  <div class="text">
+  <h1>Quotes of the day!</h1>
+<p id="quote1">Quote</p>
+<p id="author">Author</p>
 <button id="newQuote">See a new quote "quotes refreshed every five minutes"</button>
+</div>
+<p id="credit">photo credit: <a href="http://www.flickr.com/photos/53601471@N08/6961094951">Snowflake</a> via <a href="http://photopin.com">photopin</a> <a href="https://creativecommons.org/licenses/by-nc/2.0/">(license)</a></p>
+</div>
 <script src="random.js"></script>
   </body>
 </html>
