--- a/Charles/week8/randomquote/random.html
+++ b/Charles/week8/randomquote/random.html
@@ -9,9 +9,12 @@
 <div class="bround">
   <div class="text">
   <h1>Quotes of the day!</h1>
-<p id="quote1">Quote</p>
-<p id="author">Author</p>
-<button id="newQuote">See a new quote "quotes refreshed every five minutes"</button>
+<h2>Quote</h2>
+<p id="quote1"></p>
+<h2>Attributed to,</h2>
+<p id="author"></p>
+<button id="newQuote">Pull a new quote</button>
+<h2>*Quotes refresh every five minutes</h2?
 </div>
 <p id="credit">photo credit: <a href="http://www.flickr.com/photos/53601471@N08/6961094951">Snowflake</a> via <a href="http://photopin.com">photopin</a> <a href="https://creativecommons.org/licenses/by-nc/2.0/">(license)</a></p>
 </div>
