--- a/Charles/week8/randomquote/random.html
+++ b/Charles/week8/randomquote/random.html
@@ -16,7 +16,9 @@
 <button id="newQuote">Pull a new quote</button>
 <h2>*Quotes refresh every five minutes</h2?
 </div>
-<p id="credit">photo credit: <a href="http://www.flickr.com/photos/53601471@N08/6961094951">Snowflake</a> via <a href="http://photopin.com">photopin</a> <a href="https://creativecommons.org/licenses/by-nc/2.0/">(license)</a></p>
+<div id="credit">
+<p>photo credit: <a href="http://www.flickr.com/photos/53601471@N08/6961094951">Snowflake</a> via <a href="http://photopin.com">photopin</a> <a href="https://creativecommons.org/licenses/by-nc/2.0/">(license)</a></p>
+</div>
 </div>
 <script src="random.js"></script>
   </body>
