link external style sheet and add Star-Wars-style image heading

--- a/Evan/forum-api-test.html
+++ b/Evan/forum-api-test.html
@@ -3,21 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Evan's Mock Forum</title>
-    <style media="screen">
-      input, textarea {
-        display: block;
-      }
-    </style>
+    <link rel="stylesheet" href="forum.css" media="screen" charset="utf-8">
   </head>
   <body>
     <header>
-      <h1>Welcome to the Forum</h1>
+      <a href="http://fontmeme.com/freefonts/624/star_jedi.font"><img alt="Star Jedi Font" src="http://fontmeme.com/freefonts/img.php?f=624&s=55&t=usE%20THE%20FoXuM&c=FBDC12"></a>
       <h2>Brought to you by jQuery and a depricated Google Spreadsheet API</h2>
     </header>
     <main>
-      <p>
-        current posts go here:
-      </p>
       <div class="current-post-list">
         <span id="loading">
           loading posts...
