remove placeholder in textarea, change submit button's value to POST

--- a/Evan/forum-api-test.html
+++ b/Evan/forum-api-test.html
@@ -22,8 +22,8 @@
             <label for="new-post-title">Title: </label>
             <input id="new-post-title" type="text" name="title" value="">
             <label for="new-post-body">Body: </label>
-            <textarea id="new-post-body" name="bodytext" rows="8" cols="40" placeholder="body text here"></textarea>
-            <input type="submit" name="submit" value="create post">
+            <textarea id="new-post-body" name="bodytext" rows="8" cols="40"></textarea>
+            <input type="submit" name="submit" value="POST">
         </form>
       </div>
     </main>
