fixed h1 and h2 tags

--- a/Charles/week8/randomquote/random.html
+++ b/Charles/week8/randomquote/random.html
@@ -14,8 +14,8 @@
 <h2>Attributed to,</h2>
 <p id="author"></p>
 <button id="newQuote">Pull a new quote</button>
-<h2>*Quotes refresh every five minutes</h2?
 </div>
+<h3>*Quotes refresh every five minutes</h3>
 <footer class="foot">
 <p4>photo credit: <a href="http://www.flickr.com/photos/53601471@N08/6961094951">Snowflake</a> via <a href="http://photopin.com">photopin</a> <a href="https://creativecommons.org/licenses/by-nc/2.0/">(license)</a></p4>
 </footer>
