mostly random-quote assignment

--- a/Sheri/random_quote/random.html
+++ b/Sheri/random_quote/random.html
@@ -23,7 +23,11 @@
         <button id="new">New Quote</button>
       </div>
     </div>
-  </main>
+  <footer>
+  <p>Design inspired by artist Hannah Cook ([@hawnuhlee](https://www.instagram.com/hawnuhlee/)).
+  </p>
+</footer>
+</main>
   <script src="random.js"></script>
 </body>
 
