forum css complete

--- a/Juan/Exercises/Forum/index.html
+++ b/Juan/Exercises/Forum/index.html
@@ -6,22 +6,25 @@
     <title>May the Forum Be With You</title>
   </head>
   <body>
-    <header>
-      <h1>Feel the Forum</h1>
-      <caption>You have no idea the power of the post button.</caption>
-    </header>
     <div class="wrapper">
-      <div class="new_post_form">
-        <form class="new_post">
-          <h2>Push New Post</h2>
-          <label for="post_title">Post Title</label>
-          <input type="text" name="post_title" id="post_title" value="">
-          <label for="post_text">Post Text</label>
-          <textarea name="post_text" id="post_text" rows="8" cols="40"></textarea>
-          <input type="submit" name="make_post" value="Post" id="make_post">
-        </form>
-      </div>
-      <div class="post_display" id="post_display">
+      <header>
+        <h1>Feel the Forum</h1>
+        <caption>You have no idea the power of the post button.</caption>
+      </header>
+      <div class="main">
+        <div class="new_post_form">
+          <h2 id="form_reveal">Push New Post</h2>
+          <form class="new_post no_height">
+            <label for="post_title">Post Title</label>
+            <input type="text" name="post_title" id="post_title" value="">
+            <label for="post_text">Post Text</label>
+            <textarea name="post_text" id="post_text" rows="8" cols="40"></textarea>
+            <input type="submit" name="make_post" value="Post" id="make_post">
+          </form>
+        </div>
+        <div class="post_display" id="post_display">
+          <!-- ajax loaded posts go here -->
+        </div>
       </div>
     </div>
     <footer></footer>
