css tweaks to header

--- a/Juan/Exercises/Forum/index.html
+++ b/Juan/Exercises/Forum/index.html
@@ -8,8 +8,12 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Feel the Forum</h1>
-        <caption>You have no idea the power of the post button.</caption>
+        <h1 class="fade_in">Feel the Forum</h1>
+        <caption >
+          <p class="fade_in">
+            You have no idea the power of the post button.
+          </p>
+        </caption>
       </header>
       <div class="main">
         <div class="new_post_form">
