--- a/Evan/forum-api-test.html
+++ b/Evan/forum-api-test.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <a href="http://fontmeme.com/freefonts/624/star_jedi.font"><img alt="Star Jedi Font" src="http://fontmeme.com/freefonts/img.php?f=624&s=55&t=usE%20THE%20FoXuM&c=FBDC12"></a>
-      <h2>Brought to you by jQuery and a depricated Google Spreadsheet API</h2>
+      <h2>Brought to you by jQuery and a deprecated Google Spreadsheet API</h2>
     </header>
     <main>
       <div class="current-post-list">
