--- a/Juan/Exercises/Week9/javapicJquery/index.html
+++ b/Juan/Exercises/Week9/javapicJquery/index.html
@@ -15,8 +15,7 @@
     <div class="bottom_jumbo"><a href="join.html">join now</a></div>
 
 </main>
-    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
