--- a/Charles/week9/javapic_jquery/gallery.html
+++ b/Charles/week9/javapic_jquery/gallery.html
@@ -15,8 +15,8 @@
     <div id="image_show" class="display_none"><img src="images/pdxcg_40.jpg" /></div>
 </main>
 
-<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
-<script type="text/javascript" src="js/gallery.js"></script>
 
+<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
+<script type="text/javascript" src="js/javapic.js"></script>
 </body>
 </html>
