--- a/Charles/week9/javapic_jquery/join.html
+++ b/Charles/week9/javapic_jquery/join.html
@@ -22,7 +22,8 @@
         </form>
     </section>
 </main>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
+
+<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
 <script type="text/javascript" src="js/javapicjoin.js"></script>
 
 </body>
