--- a/Charles/week9/javapic_jquery/gallery.html
+++ b/Charles/week9/javapic_jquery/gallery.html
@@ -17,6 +17,6 @@
 
 
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
-<script type="text/javascript" src="js/javapic.js"></script>
+<script type="text/javascript" src="js/gallery.js"></script>
 </body>
 </html>
